remove public packs

--- a/app/assets/stylesheets/dsfr.scss
+++ b/app/assets/stylesheets/dsfr.scss
@@ -9743,7 +9743,7 @@ un padding de 4px et une marge négative en compensation sont mis en place afin 
   --title-spacing: 0;
   display: inline-flex;
   align-items: center;
-  z-index: 1;
+  //z-index: 1;
   --underline-img: none;
   --link-blank-font: none;
   --link-blank-content: none;
