--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,7 +9,7 @@ body div{
   color: var(--text-title-grey);
 }
 a{
-  color: inherit !important; 
+  //color: inherit !important; 
   text-decoration:none !important;
   &:hover{
   cursor:pointer;
@@ -35,9 +35,11 @@ h1, h2{
 }
 p{
   margin:0em !important;
+ 
 }
-
-
+.pr{
+  position:relative !important;
+}
 .align_flex{
   display: inline-flex;
   display: -webkit-inline-flex;
@@ -174,10 +176,13 @@ p{
   
   }
 }
+.css-p0rm37{
+  transform: translate(14px, 8px) scale(1) !important;
+}
 .css-14s5rfu-MuiFormLabel-root-MuiInputLabel-root{
   transform: translate(14px, 8px) scale(1) !important;
 }
-.css-16awh2u-MuiAutocomplete-root .MuiOutlinedInput-root{
+.css-16awh2u-MuiAutocomplete-root .MuiOutlinedInput-root, .css-1l6di18 .MuiOutlinedInput-root{
   padding:1.4px !important;
 }
 .checkbox_li{
@@ -199,7 +204,7 @@ border-color:transparent;
     box-shadow: inset 0 -2px 0 0 var(--border-plain-grey);
   
 }
-.css-1d3z3hw-MuiOutlinedInput-notchedOutline {
+.css-1d3z3hw-MuiOutlinedInput-notchedOutline, .css-igs3ac {
   border:none !important;
 }
 
@@ -228,55 +233,6 @@ border-color:transparent;
   }
 }
 
-.box_infor{
-  background-color: #23EADE;
-  border-radius: 50px;
-  padding: 4px 8px;
-  color:var(--text-title-grey);
-  font-size:14px;
-  margin-right:5px;
-}
-
-.box_indv{
-  background-color: rgba(66, 186, 179, 0.2);
-  border-radius: 4px;
-  padding: 4px;
-  color:#42BAB3;
-  font-size:14px;
-  margin:5px;
-  display:inline-block;
-  position:relative;
-}
-.box_indj{
-  background-color: rgba(232, 207, 78, 0.2);
-  border-radius: 4px;
-  padding: 4px;
-  color:#E8CF4E;
-  font-size:14px;
-  margin:5px;
-  display:inline-block;
-  position:relative;
-}
-.box_indr{
-  background-color: rgba(255, 62, 20, 0.1);
-  border-radius: 4px;
-  padding: 4px;
-  color:#FF3E14;
-  font-size:14px;
-  margin:5px;
-  display:inline-block;
-  position:relative;
-}
-.box_indn{
-  background-color: rgba(0, 0, 0, 0.1);
-  border-radius: 4px;
-  padding: 4px;
-  color:#000;
-  font-size:14px;
-  margin:5px;
-  display:inline-block;
-  position:relative;
-}
 
 .map_legende{
 text-align:center;
@@ -329,6 +285,7 @@ text-align:center;
 }
 
 .box_ind_hover{
+  font-size:0.75rem;
   position:absolute;
   left:10px;
   top:5px;
@@ -336,13 +293,14 @@ text-align:center;
   border-radius:4px;
   background-color:rgba(255, 255, 255, 0.95);
   color:#1E1E1E;
-  z-index:1;
+  z-index:10;
   padding:8px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     -moz-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
     -o-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.2);
 }
+
 .map_center{
   width:66.7%;
   padding:0 12px;
@@ -390,4 +348,31 @@ text-align:center;
 }
 .highcharts-button-box{
   fill:var(--text-action-high-blue-france) !important;
+}
+.react-datepicker{
+  border:none !important;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0,0.1), 0 8px 16px -16px rgba(0, 0, 0,0.32) !important;
+  border-radius:0px !important;
+}
+.react-datepicker__header{
+  background-color: var(--background-action-high-blue-france) !important;
+  --hover: var(--background-action-high-blue-france-hover) !important;
+  --active: var(--background-action-high-blue-france-active) !important;
+  color: var(--text-inverted-blue-france) !important;
+  border:none !important;
+  border-radius:0px !important;
+}
+.react-datepicker__day--keyboard-selected, .react-datepicker__month-text--keyboard-selected, .react-datepicker__quarter-text--keyboard-selected, .react-datepicker__year-text--keyboard-selected{
+  background-color: var(--background-action-high-blue-france) !important;
+  --hover: var(--background-action-high-blue-france-hover) !important;
+  --active: var(--background-action-high-blue-france-active) !important;
+  border-radius:0px !important;
+  &:hover{
+  border-radius:0px !important;
+  }
+}
+.react-datepicker__month-text{
+  &:hover{
+  border-radius:0px !important;
+  }
 }
