update css responsive + mode noir

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
 </header>
 <div class="fr-container">    
   <div class="fr-grid-row fr-grid-row--gutters">
-    <div class="fr-col-lg-6 fr-col-offset-lg-3">
+    <div class="fr-col-lg-12 fr-col-lg-6 fr-col-offset-lg-3">
        
       
       <div class="fr-hidden">
