--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -66,7 +66,7 @@ p{
   color:#E8CF4E;
 }
 .cnoir{
-  color:#000;
+  color:var(--text-title-grey);
 }
 .cgris{
   color: #8F8F8F;
@@ -97,7 +97,7 @@ p{
 }
 .loader_box{
   min-height:400px;
-  background-color:#fff;
+  background-color:var(--text-inverted-grey) ;
   opacity: 0.5;
   width:100%;
   position:absolute;
@@ -127,7 +127,7 @@ p{
 
 .bouton_inactif{
   background-color:#F0F0F0;
-  color:#fff;
+  color:var(--text-inverted-grey) ;
   font-size:16px;
   padding: 10px 15px;
   border:none;
@@ -226,8 +226,8 @@ border-color:transparent;
 }
 
 .highcharts-credits{
-  color:#fff !important;
-  fill: #fff !important;
+  color:var(--text-inverted-grey)  !important;
+  fill: var(--text-inverted-grey)  !important;
 }
 .map_se{
   width:33.3%;
@@ -250,7 +250,7 @@ text-align:center;
 }
 .react-datepicker__input-container input{
   border:none;
-  border-bottom: 1px solid rgba(0,0,0,0.2);
+  border-bottom: 1px solid var(--text-title-grey);
   padding:4px 0px;
   font-size:1rem;
   font-family: Marianne !important;
@@ -324,8 +324,8 @@ text-align:center;
   width:33.3%;
 }
 .highcharts-button-symbol{
-  stroke:#FFF !important;
-  fill:#FFF !important;
+  stroke:var(--text-inverted-grey)  !important;
+  fill:var(--text-inverted-grey)  !important;
 }
 .highcharts-button-box{
   fill:var(--text-action-high-blue-france) !important;
@@ -357,6 +357,12 @@ text-align:center;
   border-radius:0px !important;
   }
 }
+.react-datepicker__current-month, .react-datepicker-time__header, .react-datepicker-year-header,.react-datepicker__day-name{
+  color: var(--text-inverted-blue-france) !important;
+}
+.react-datepicker__month-container{
+  background-color: var(--text-inverted-grey)  !important;
+}
 .card_title{
   //text-align:center;
   order:0 !important;
@@ -376,3 +382,10 @@ text-align:center;
   color:var(--text-title-grey) !important;
   fill:var(--text-title-grey) !important;
 }
+.css-9e5uuu-MuiPaper-root-MuiAutocomplete-paper, .css-t4hinj{
+  background-color: var(--text-inverted-grey)  !important;
+}
+.css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator, .css-iqd1hh-MuiButtonBase-root-MuiChip-root, .css-uge3vf, .css-5vxoam, .css-zun73v, .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root, .css-i4bv87-MuiSvgIcon-root, .css-vubbuv, .css-1k33q06{
+  color: var(--text-title-grey) !important;
+}
+
