--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,66 @@
+<header role="banner" class="fr-header">
+    <div class="fr-header__body">
+        <div class="fr-container">
+            <div class="fr-header__body-row">
+                <div class="fr-header__brand fr-enlarge-link">
+                    <div class="fr-header__brand-top">
+                        <div class="fr-header__logo">
+                            <p class="fr-logo">
+                                Ministère
+                                <br>de l'économie,<br>des finances<br>et de la souveraineté<br> industrielle et numérique
+                            </p>
+                        </div>
+                        <div class="fr-header__navbar">
+                            <button class="fr-btn--menu fr-btn" data-fr-opened="false" aria-controls="fr-menu-modal" aria-haspopup="menu" id="button-477" title="Menu">
+                                Menu
+                            </button>
+                        </div>
+                    </div>
+                    <div class="fr-header__service">
+                        <a href="/" title="Accueil - SIMULAE">
+                          <p class="fr-header__service-title">SIMP3 <span class="fr-badge fr-badge--sm fr-badge--green-emeraude">BÊTA</span></p>
+                        </a>
+                        <p class="fr-header__service-tagline">Suivi des indicateurs MP3</p>
+                    </div>
+                </div>
+                <div class="fr-header__tools">
+                    <div class="fr-header__tools-links ">
+                        <ul class="fr-btns-group">
+                            
+                            <li class="fr-shortcuts__item">
+                                <a class="fr-btn fr-fi-logout-box-r-line" data-method="delete" href="/logout">Se déconnecter</a>
+                            </li>  
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+ 
+    <div class="fr-header__menu fr-modal" id="fr-menu-modal" aria-labelledby="fr-btn-menu-mobile">
+        <div class="fr-container">
+            <button class="fr-link--close fr-link" aria-controls="fr-menu-modal">Fermer</button>
+            <div class="fr-header__menu-links"></div>
+            <nav class="fr-nav" id="navigation-832" role="navigation" aria-label="Menu principal">
+                        <ul class="fr-nav__list">
+                            <li class="fr-nav__item">
+                                <%= active_link_to "/cartographie_performance", class: "fr-nav__link", target: "_self" do%>Cartographie de la performance globale<%end%>
+                            </li>
+                            <li class="fr-nav__item">
+                                <%= active_link_to "/cartographie_indicateur", class:"fr-nav__link", target:"_self" do%>Cartographie par indicateur<%end%>
+                            </li>
+                            <li class="fr-nav__item">
+                                <%= active_link_to "/indicateur_executions", class:"fr-nav__link", target:"_self" do %>Suivi temporel des indicateurs<%end%>
+                            </li>
+                            <li class="fr-nav__item">
+                                <%= active_link_to "/indicateurs", class:"fr-nav__link", target:"_self" do%>Liste des indicateurs<%end%>
+                            </li>
+                        </ul>
+            </nav>
+        </div>
+    </div>
+</header>
+
 
 <dialog id="fr-theme-modal" class="fr-modal" role="dialog" aria-labelledby="fr-theme-modal-title">
     <div class="fr-container fr-container--fluid fr-container-md">
