--- a/app/views/home/error_500.html.erb
+++ b/app/views/home/error_500.html.erb
@@ -11,7 +11,7 @@
                             </p>
                             <ul class="fr-btns-group fr-btns-group--inline-md">
                                 <li>
-                                    <a class="fr-btn" href="/">
+                                    <a class="fr-btn" href="/cartographie_performance">
                                         Page d'accueil
                                     </a>
                                 </li>
