--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,9 +17,9 @@
                         </div>
                     </div>
                     <div class="fr-header__service">
-                        <a href="/" title="Accueil - SIMULAE">
+                        <%= active_link_to "/cartographie_performance", target: "_self", title:"Accueil - SIMULAE" do%>
                           <p class="fr-header__service-title">SIMP3 <span class="fr-badge fr-badge--sm fr-badge--green-emeraude">BÊTA</span></p>
-                        </a>
+                        <%end%>
                         <p class="fr-header__service-tagline">Suivi des indicateurs MP3</p>
                     </div>
                 </div>
