--- a/app/views/home/error_500.html.erb
+++ b/app/views/home/error_500.html.erb
@@ -11,9 +11,9 @@
                             </p>
                             <ul class="fr-btns-group fr-btns-group--inline-md">
                                 <li>
-                                    <a class="fr-btn" href="/cartographie_performance">
+                                    <%= active_link_to "/cartographie_performance", class:"fr-btn", target: "_self" do %>
                                         Page d'accueil
-                                    </a>
+                                    <%end%>
                                 </li>
                                 <li>
                                     <a class="fr-btn fr-btn--secondary" href="mailto:declic.budget@finances.gouv.fr" target="_blank"">
