--- a/app/assets/stylesheets/dsfr.scss
+++ b/app/assets/stylesheets/dsfr.scss
@@ -7135,7 +7135,7 @@ h1 {
 .fr-badge {
   --text-spacing: 0;
   --title-spacing: 0;
-  z-index: 1;
+  //z-index: 1;
   display: inline-flex;
   flex-direction: row;
   align-items: center;
