--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -187,7 +187,7 @@ h1, h2{
 .css-9e5uuu-MuiPaper-root-MuiAutocomplete-paper, .css-t4hinj{
   background-color: var(--text-inverted-grey)  !important;
 }
-.css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator, .css-iqd1hh-MuiButtonBase-root-MuiChip-root, .css-uge3vf, .css-5vxoam, .css-zun73v, .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root, .css-i4bv87-MuiSvgIcon-root, .css-vubbuv, .css-1k33q06{
+.css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator, .css-iqd1hh-MuiButtonBase-root-MuiChip-root, .css-uge3vf, .css-5vxoam, .css-zun73v, .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root, .css-i4bv87-MuiSvgIcon-root, .css-vubbuv, .css-1k33q06, .css-16awh2u-MuiAutocomplete-root .MuiAutocomplete-tag, .css-1glvl0p-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-clearIndicator{
   color: var(--text-title-grey) !important;
 }
 .checkbox_li{
@@ -385,3 +385,4 @@ text-align:center;
 .mapicon img{
   height:18px;
 }
+//.fr-badge remove z-index dans dsfr
