update pages accessibilite + mentions legales

--- a/app/views/home/accessibilite.html.erb
+++ b/app/views/home/accessibilite.html.erb
@@ -3,37 +3,65 @@
 <div class="fr-grid-row">
 	<div class="fr-col-12 fr-col-md-8">
 		  		<h1>Déclaration d'accessibilité</h1>
-		  		<section class="fr-py-6v">
-		  			<p class="fr-mt-4v fr-mb-0">Établie le 16 juillet 2022.</p>
-		  			<p class="fr-mt-4v fr-mb-0">
-					Le Ministère de l'Economie, des Finances et de la Relance et la DGAFP s’engagent à rendre leur service accessible, conformément à l’article 47 de la loi n° 2005-102 du 11 février 2005.</p>
-					<p class="fr-mt-4v fr-mb-0">Cette déclaration d’accessibilité s’applique à SIMP3.</p>
-				</section>
-				
+		  	
 				<section class="fr-py-6v">
-					<h2 class="fr-h5">État de conformité</h2>
-					<p class="fr-mt-4v fr-mb-0">SIMP3 est partiellement conforme avec le RGAA. </p>
+					<p class="fr-mt-4v fr-mb-0">La Direction du Budget s’engage à rendre ses sites internet, intranet, extranet et ses progiciels accessibles (et ses applications mobiles et mobilier urbain numérique) conformément à l’article 47 de la loi n°2005-102 du 11 février 2005.</p>
+
+					<p class="fr-mt-4v fr-mb-0">Cette déclaration d’accessibilité s’applique à SIMP3.</p>
 				</section>
 				<section class="fr-py-6v">
-					<h2 class="fr-h5">Résultats des tests</h2>
-					<p class="fr-mt-4v fr-mb-0">L’audit de conformité réalisé en auto-évaluation révèle que 60% des critères sont respectés. </p>
+					<h2 class="fr-h2">État de conformité</h2>
+					<p class="fr-mt-4v fr-mb-0">SIMP3 est partiellement conforme avec le référentiel général d’amélioration de l’accessibilité (RGAA), version 4 en raison des non-conformités et des dérogations énumérées ci-dessous. </p>
 				</section>
 				<section class="fr-py-6v">
-					<h2 class="fr-h5">Amélioration et contact</h2>
+					<h3 class="fr-h3">Résultats des tests</h3>
+					<p class="fr-mt-4v fr-mb-0">L’audit de conformité réalisé par [nom de l’entité qui a réalisé l’audit] révèle que : </p>
+					<p class="fr-mt-4v fr-mb-0">60% des critères du RGAA version 4 sont respectés ; </p>
+				</section>
+				<section class="fr-py-6v">
+					<h2 class="fr-h2">Contenus non accessibles</h2>			
+					<p class="fr-mt-4v fr-mb-0">A lister</p>
+				</section>
+				<section class="fr-py-6v">
+					<h2 class="fr-h2">Établissement de cette déclaration d’accessibilité</h2>			
+					<p class="fr-mt-4v fr-mb-0">Cette déclaration a été établie le 16 juillet 2022. Elle a été mise à jour le 29 juillet 2022</p>
+				</section>
+				<section class="fr-py-6v">
+					<h3 class="fr-h3">Technologies utilisées pour la réalisation l’audit</h3>
+					
+					<p class="fr-mt-4v fr-mb-0">- HTML5</p>
+					<p class="fr-mt-4v fr-mb-0">- SCSS</p>
+				</section>
+				<section class="fr-py-6v">
+					<h3 class="fr-h3">Environnement de test</h3>
+					<p class="fr-mt-4v fr-mb-0">Les vérifications de restitution de contenus ont été réalisées sur la base de la combinaison fournie par la base de référence du RGAA, avec les versions suivantes :</p>
+					<p class="fr-mt-4v fr-mb-0">- Firefox et NVDA</p>
+					<p class="fr-mt-4v fr-mb-0">- Safari et VoiceOver</p>
+				</section>
+				<section class="fr-py-6v">
+					<h3 class="fr-h3">Outils pour évaluer l’accessibilité</h3>
+					<p class="fr-mt-4v fr-mb-0">A Lister</p>
+				</section>
+				<section class="fr-py-6v">
+					<h3 class="fr-h3">Pages du site ayant fait l’objet de la vérification de conformité</h3>
+					<p class="fr-mt-4v fr-mb-0">A lister</p>
+				</section>
+				<section class="fr-py-6v">
+					<h2 class="fr-h2">Retour d’information et contact</h2>
 			
 					<p class="fr-mt-4v fr-mb-0">
-					Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter le responsable de SIMP3 pour être orienté vers une alternative accessible ou obtenir le contenu sous une autre forme.</p>
+					Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter le responsable SIMP3 pour être orienté vers une alternative accessible ou obtenir le contenu sous une autre forme.</p>
 
-					<p class="fr-mt-4v fr-mb-0">E-mail : @finances.gouv.fr</p>
+					<p class="fr-mt-4v fr-mb-0">E-mail : budgetlab@finances.gouv.fr</p>
 					<p class="fr-mt-4v fr-mb-0">Adresse : 139 rue de Bercy, 75012 PARIS</p>
 				</section>
 				<section class="fr-py-6v">
-				<h2 class="fr-h5">Voie de recours</h2>
+				<h2 class="fr-h2">Voie de recours</h2>
 
 				<p class="fr-mt-4v fr-mb-0">
-					Cette procédure est à utiliser dans le cas suivant : vous avez signalé au responsable du site internet un défaut d’accessibilité qui vous empêche d’accéder à un contenu ou à un des services du portail et vous n’avez pas obtenu de réponse satisfaisante.</p>
+					Si vous constatez un défaut d’accessibilité vous empêchant d’accéder à un contenu ou une fonctionnalité du site, que vous nous le signalez et que vous ne parvenez pas à obtenir une réponse de notre part, vous êtes en droit de faire parvenir vos doléances ou une demande de saisie au Défenseur des droits.</p>
 
-				<p class="fr-mt-4v fr-mb-0">	Vous pouvez :</p>
+				<p class="fr-mt-4v fr-mb-0">Plusieurs moyens sont à votre disposition :</p>
 
 				<p class="fr-mt-4v fr-mb-0">	
 					- <a target="_blank" rel="noopener" href="https://formulaire.defenseurdesdroits.fr/" title="Écrire un message au Défenseur des droits - nouvelle fenêtre">Écrire un message au Défenseur des droits</a>
