--- a/app/views/home/mentions_legales.html.erb
+++ b/app/views/home/mentions_legales.html.erb
@@ -3,24 +3,36 @@
 <div class="fr-grid-row">
 	<div class="fr-col-12 fr-col-md-8">
 		  		<h1>Mentions légales</h1>
-		  		<section class="fr-py-6v">
-		  		<p class="fr-mt-4v fr-mb-0">Mises à jour le 16 Juillet 2022.</p>
 		  	
-				</section>
-				<section class="fr-py-6v">
-				<h2 class="fr-h5">Éditeur</h2>
+				<section class="fr-pb-6v">
+				
 				<p class="fr-mt-4v fr-mb-0">
-					Ministère de l'Économie, des finances et de la relance - Direction du Budget
+					Ce site est édité par la Direction du Budget au sein du Ministère de l'Économie, des finances et de la relance. 
 				</p>
-				<p class="fr-mt-4v fr-mb-0">Directrice de la publication : Mme Mélanie Joder - Directrice du Budget</p>
+				<p class="fr-mt-4v fr-mb-0">Les mentions légales ont été établies le 16 Juillet 2022. Elles ont été mises à jour le 16 Juillet 2022.</p>
 				</section>
 				<section class="fr-py-6v">
-				<h2 class="fr-h5">Conception et gestion du site</h2>
-				<p class="fr-mt-4v fr-mb-0">Direction du Budget</p>
+				<h2 class="fr-h2">Directrice de publication</h2>
+				<p class="fr-mt-4v fr-mb-0">Mme Mélanie Joder - Directrice du Budget</p>
 
 				</section>
 				<section class="fr-py-6v">
-				<h2 class="fr-h5">Hébergement </h2>
+				<h2 class="fr-h2">Conception et gestion du site</h2>
+				<p class="fr-mt-4v fr-mb-0">Ce site est conçu et développé par l’équipe de la Direction du Budget et utilise le système de design de l’État.</p>
+
+				</section>
+				<section class="fr-py-6v">
+				<h2 class="fr-h2">Code source du site</h2>
+				<p class="fr-mt-4v fr-mb-0">Le code source du site est disponible sur Github.</p>
+				</section>
+				<section class="fr-py-6v">
+				<h2 class="fr-h2">Propriété intellectuelle et liens</h2>
+				<p class="fr-mt-4v fr-mb-0">Tout site public ou privé est autorisé à établir, sans autorisation préalable, un lien vers les informations diffusées sur budgetlab.gouv.fr/simp3.</p>
+				<p class="fr-mt-4v fr-mb-0">Sauf mention de propriété intellectuelle détenue par des tiers, les contenus de ce site sont proposés sous licence ouverte 2.0.</p>
+				<p class="fr-mt-4v fr-mb-0">La mise en place de liens vers nos contenus et documents est cependant est à privilégier par rapport à la reproduction sur un site tiers. La mention explicite du site source budgetlab.gouv.fr/simp3 est recommandée.</p>
+				</section>
+				<section class="fr-py-6v">
+				<h2 class="fr-h2">Hébergement </h2>
 				<p class="fr-mt-4v fr-mb-0">Google Cloud Platform - Google France</p>
 				<p class="fr-mt-4v fr-mb-0">Fournisseur de Cloud public (CSP) Google dans le cadre du marché UGAP C3</p>
 				<p class="fr-mt-4v fr-mb-0">
@@ -29,10 +41,7 @@
 				</p>
 
 				</section>
-				<section class="fr-py-6v">
-				<h2 class="fr-h5">Code source du site</h2>
-				<p class="fr-mt-4v fr-mb-0">Le code source du site est disponible sur Github.</p>
-				</section>
+				
 				
 </div>
 </div>
