--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,16 +86,18 @@ h1, h2{
 }
 .loader_box{
   min-height:400px;
+  height:100%;
   background-color:var(--text-inverted-grey) ;
-  opacity: 0.5;
+  opacity: 0.8;
   width:100%;
   position:absolute;
   top:0px;
+  left:0px;
   z-index:1;
 }
 .loader {
   position: absolute;
-  top: calc(50% - 1em);
+  top: 10em;//calc(50% - 1em);
   left: calc(50% - 4em);
   width: 6em;
   height: 6em;
