update legend + font family mui

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -191,6 +191,7 @@ h1, h2{
 }
 .css-qzbt6i-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-popupIndicator, .css-iqd1hh-MuiButtonBase-root-MuiChip-root, .css-uge3vf, .css-5vxoam, .css-zun73v, .css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root, .css-i4bv87-MuiSvgIcon-root, .css-vubbuv, .css-1k33q06, .css-16awh2u-MuiAutocomplete-root .MuiAutocomplete-tag, .css-1glvl0p-MuiButtonBase-root-MuiIconButton-root-MuiAutocomplete-clearIndicator{
   color: var(--text-title-grey) !important;
+  font-family: Marianne;
 }
 .checkbox_li{
   color:var(--text-label-grey) !important;
