--- a/app/views/home/error_500.html.erb
+++ b/app/views/home/error_500.html.erb
@@ -11,7 +11,7 @@
                             </p>
                             <ul class="fr-btns-group fr-btns-group--inline-md">
                                 <li>
-                                    <%= active_link_to "/cartographie_performance", class:"fr-btn", target: "_self" do %>
+                                    <%= active_link_to root_path, class:"fr-btn", target: "_self" do %>
                                         Page d'accueil
                                     <%end%>
                                 </li>
