--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,7 +17,7 @@
                         </div>
                     </div>
                     <div class="fr-header__service">
-                        <%= active_link_to "/cartographie_performance", target: "_self", title:"Accueil - SIMULAE" do%>
+                        <%= active_link_to root_path, target: "_self", title:"Accueil - SIMULAE" do%>
                           <p class="fr-header__service-title">SIMP3 <span class="fr-badge fr-badge--sm fr-badge--green-emeraude">BÊTA</span></p>
                         <%end%>
                         <p class="fr-header__service-tagline">Suivi des indicateurs MP3</p>
@@ -42,20 +42,33 @@
             <button class="fr-btn--close fr-btn" aria-controls="fr-menu-modal">Fermer</button>
             <div class="fr-header__menu-links"></div>
             <nav class="fr-nav" id="navigation-832" role="navigation" aria-label="Menu principal">
-                        <ul class="fr-nav__list">
-                            <li class="fr-nav__item">
-                                <%= active_link_to cartographie_performance_path, class: "fr-nav__link", target: "_self" do%>Cartographie de la performance globale<%end%>
-                            </li>
-                            <li class="fr-nav__item">
-                                <%= active_link_to "/cartographie_indicateur", class:"fr-nav__link", target:"_self" do%>Cartographie par indicateur<%end%>
-                            </li>
-                            <li class="fr-nav__item">
-                                <%= active_link_to "/indicateur_executions", class:"fr-nav__link", target:"_self" do %>Suivi temporel des indicateurs<%end%>
-                            </li>
-                            <li class="fr-nav__item">
-                                <%= active_link_to indicateurs_path, class:"fr-nav__link", target:"_self" do%>Liste des indicateurs<%end%>
-                            </li>
-                        </ul>
+                <ul class="fr-nav__list">
+                    <li class="fr-nav__item">
+                        <%= active_link_to root_path, class: "fr-nav__link", target: "_self",:active => [['home'], ['index']] do%>Accueil<%end%>
+                    </li>
+                    <li class="fr-nav__item">
+                        <%= active_link_to cartographie_performance_path, class: "fr-nav__link", target: "_self" do%>Cartographie de la performance globale<%end%>
+                    </li>
+                    <li class="fr-nav__item">
+                        <%= active_link_to "/cartographie_indicateur", class:"fr-nav__link", target:"_self" do%>Cartographie par indicateur<%end%>
+                    </li>
+                    <li class="fr-nav__item">
+                        <%= active_link_to "/indicateur_executions", class:"fr-nav__link", target:"_self" do %>Suivi temporel des indicateurs<%end%>
+                    </li>
+                    <li class="fr-nav__item">
+                        <button class="fr-nav__btn" aria-expanded="false" aria-controls="menu-776">Informations</button>
+                        <div class="fr-collapse fr-menu" id="menu-776">
+                            <ul class="fr-menu__list">
+                                <li>
+                                    <%= active_link_to indicateurs_path, class:"fr-nav__link", target:"_self" do%>Liste des indicateurs<%end%>
+                                </li>
+                                <li>
+                                    <%= active_link_to service_executants_path, class:"fr-nav__link", target:"_self" do%>Liste des services exécutants <%end%>
+                                </li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
             </nav>
         </div>
     </div>
